add empty additionalInfos where they cannot be retrieved